Refactor and set resume to session (#6)
* refactor and set resume to session
